@@ -51,6 +51,13 @@ if dfhack.is_core_context then
     SC_UNPAUSED = 8
 end
 
+-- User-changeable options
+
+dfhack.HIDE_CONSOLE_ON_STARTUP = true
+function dfhack.getHideConsoleOnStartup()
+    return dfhack.HIDE_CONSOLE_ON_STARTUP
+end
+
 -- Error handling
 
 safecall = dfhack.safecall
